
- QNetworkConfiguration::bearerName() removed, and bearerTypeName() should be used.

- QDir::convertSeparators() (deprecated since Qt 4.2) has been removed. Use
  QDir::toNativeSeparators() instead.

- QIconEngineV2 was merged into QIconEngine
  You might need to adjust your code if it used a QIconEngine.

- qmake
  * Projects which explicitly set an empty TARGET are considered broken now.
  * several functions and built-in variables were modified to return normalized paths.

- QTextCodecPlugin has been removed since it is no longer used. All text codecs
  are now built into QtCore.

- QDir::NoDotAndDotDot is QDir::NoDot|QDir::NoDotDot therefore there is no need
  to use or check both.

- QFSFileEngine, QAbstractFileEngine, QAbstractFileEngineIterator and
  QAbstractFileEngineHandler were removed from public API and are no longer
  exported. They may temporarily live as private implementation details, but
  they may be altogether dropped or otherwise changed at will in the future.

- QLocale
  * toShort(), toUShort(), toInt(), toUInt(), toLongLong() and toULongLong() no
    longer take a parameter for base, they will only perform localised base 10
    conversions. For converting other bases use the QString methods instead.

- QSystemLocale has been removed from the public API.

- QSqlQueryModel::indexInQuery() is now virtual. See note below under QSql.

- qMacVersion() has been removed. Use QSysInfo::macVersion() or
  QSysInfo::MacintoshVersion instead.

****************************************************************************
*                           General                                        *
****************************************************************************

General Improvements
--------------------

- The directory structure of the qtbase unit-tests has been reworked to
  more closely match the directory structure of the code under test.
  Integration tests have been moved to tests/auto/integrationtests.

Third party components